[gd_scene load_steps=6 format=3 uid="uid://dfmamdho0d2x"]

[ext_resource type="Script" uid="uid://toxqvsk2r35c" path="res://scenes/battle/battle_manager.gd" id="1_xd4uy"]
[ext_resource type="PackedScene" uid="uid://k0eru0jyth8d" path="res://scenes/battle/SlotMachine/slot_machine.tscn" id="2_ffvsa"]
[ext_resource type="Resource" uid="uid://b7piwl53m72hw" path="res://custom_resources/encounters/test_encounter.tres" id="2_fh7rg"]
[ext_resource type="PackedScene" uid="uid://dvbx04ecwkatj" path="res://scenes/characters/player_character.tscn" id="3_h0kxc"]
[ext_resource type="Script" uid="uid://cwypjm2n71a1n" path="res://scenes/characters/player_character.gd" id="4_fh7rg"]

[node name="Battle" type="Node2D"]

[node name="BattleManager" type="Node2D" parent="."]
script = ExtResource("1_xd4uy")
current_encounter = ExtResource("2_fh7rg")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3956, 0.415093, 0.43, 1)
metadata/_edit_lock_ = true

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Left" type="Marker2D" parent="SpawnPoints"]
position = Vector2(680, 425)

[node name="mid" type="Marker2D" parent="SpawnPoints"]
position = Vector2(845, 415)

[node name="right" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1000, 425)

[node name="Characters" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="Characters" groups=["enemies_container"]]

[node name="PlayerCharacter" parent="Characters" groups=["player_character"] instance=ExtResource("3_h0kxc")]
position = Vector2(279, 371)
script = ExtResource("4_fh7rg")

[node name="UI" type="CanvasLayer" parent="."]
layer = -1

[node name="SlotMachine" parent="UI" instance=ExtResource("2_ffvsa")]
offset_left = 25.0
offset_top = 25.0
offset_right = -564.0
offset_bottom = -452.0

[node name="SpellsPanel" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ManaLabel" type="Label" parent="UI/SpellsPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Spells" type="HBoxContainer" parent="UI/SpellsPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Equipment" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AttackButton" type="Button" parent="UI"]
offset_left = 374.0
offset_top = 378.0
offset_right = 432.0
offset_bottom = 409.0
text = "Attack"

[node name="EndTurnButton" type="Button" parent="UI"]
offset_left = 738.0
offset_top = 472.0
offset_right = 816.0
offset_bottom = 503.0
text = "End Turn
"
